namespace BucketPattern.Interfaces
{
    public interface IRepository1
    {
        string GetInfo();
    }
}
