namespace BucketPattern.Interfaces
{
    public interface IRepository2
    {
        string GetInfo();
    }
}
