namespace BucketPattern.Interfaces
{
    public interface IRepository3
    {
        string GetInfo();
    }
}
