namespace BucketPattern.Interfaces
{
    public interface IRepository4
    {
        string GetInfo();
    }
}
