namespace BucketPattern.Interfaces
{
    public interface IRepository5
    {
        string GetInfo();
    }
}
