namespace BucketPattern.Interfaces
{
    public interface IRepository6
    {
        string GetInfo();
    }
}
