namespace BucketPattern.Interfaces
{
    public interface IService
    {
        Task<string> MethodAsync();
    }
}
